# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  application.h  main.cpp
src/geometry/: cube.h  triangle.h
src/shader/: shader.cpp  shader.h  shader_simple.h  shader_uniform_color.h
src/texture/: texture.h
src/transform/: transform.h
